// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/AuditDetail/execStatusMap render doing tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-geekblue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-n94hhh css-dev-only-do-not-override-txh9fw"
    >
      正在执行
    </span>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/execStatusMap render failed tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-red ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-sd5et5 css-dev-only-do-not-override-txh9fw"
    >
      执行失败
    </span>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/execStatusMap render initialized tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
    >
      准备执行
    </span>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/execStatusMap render manually_executed tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-orange ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ima1ur css-dev-only-do-not-override-txh9fw"
    >
      人工执行
    </span>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/execStatusMap render succeeded tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ce1x2t css-dev-only-do-not-override-txh9fw"
    >
      执行成功
    </span>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/execStatusMap render terminate_failed tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-red ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-sd5et5 css-dev-only-do-not-override-txh9fw"
    >
      中止失败
    </span>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/execStatusMap render terminate_succeeded tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-ce1x2t css-dev-only-do-not-override-txh9fw"
    >
      中止成功
    </span>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/execStatusMap render terminating tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-geekblue ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-n94hhh css-dev-only-do-not-override-txh9fw"
    >
      正在中止
    </span>
  </div>
</body>
`;
